// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeSelector > should render correctly with errors 1`] = `
<div
  className=""
>
  <span
    className="govuk-error-message"
    id="publish-start-time-input-error"
  >
    <span
      className="govuk-visually-hidden"
    >
      Error: 
    </span>
    There was an error
  </span>
  <div
    aria-describedby="publish-start-time-input-error"
    className="govuk-form-group govuk-date-input--error"
  >
    <input
      className="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input--error "
      defaultValue="0900"
      disabled={false}
      id="publish-start-time-input"
      name="publishStartTime"
      placeholder="hhmm"
      type="text"
    />
  </div>
</div>
`;

exports[`TimeSelector > should render correctly with inputs 1`] = `
<div
  className=""
>
  <div
    className="govuk-form-group"
  >
    <input
      className="govuk-input govuk-date-input__input govuk-input--width-4  "
      defaultValue="0900"
      disabled={false}
      id="publish-start-time-input"
      name="publishStartTime"
      placeholder="hhmm"
      type="text"
    />
  </div>
</div>
`;

exports[`TimeSelector > should render correctly with no inputs 1`] = `
<div
  className=""
>
  <div
    className="govuk-form-group"
  >
    <input
      className="govuk-input govuk-date-input__input govuk-input--width-4  "
      disabled={false}
      id="publish-start-time-input"
      name="publishStartTime"
      placeholder="hhmm"
      type="text"
    />
  </div>
</div>
`;
